[gd_scene load_steps=34 format=3 uid="uid://brlumw76qtq4q"]

[ext_resource type="Script" uid="uid://cpvrpqgx2hr03" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://wk0jo31r04lf" path="res://assets/pawncharacter.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://b07ljly23fqn3" path="res://assets/pentagon.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://cg2nlkyuff14p" path="res://assets/playerhealthempty.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://0ron68pmh4lv" path="res://assets/playerhealthfull.png" id="5_smehm"]
[ext_resource type="Texture2D" uid="uid://dkry1540wvsyj" path="res://assets/playerhealthdamaged.png" id="5_ur7pv"]
[ext_resource type="Texture2D" uid="uid://bi5a5gi3cfm36" path="res://assets/energybarempty.png" id="6_ur7pv"]
[ext_resource type="Texture2D" uid="uid://dv0xwkranca1m" path="res://assets/energybarfull.png" id="7_fjrip"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 11.0
height = 73.28

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602142, 1),
"update": 0,
"values": [Vector2(0.07, 0.13), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602142, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "walk"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.11, 0.09), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"jump": SubResource("Animation_dqkch"),
&"walk": SubResource("Animation_g2els")
}

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DummyPentagon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-68.912506, -29.922081)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "basicattack1"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DummyPentagon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.07519195, 0.1, 0.12475029, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 0.43527526, 1),
"update": 0,
"values": [Vector2(-30, 30), Vector2(16.715, 44.14), Vector2(64.585, 44.14), Vector2(100, 0), Vector2(40, -49.97), Vector2(0, -43.7), Vector2(-60, -30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fjrip"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"basicattack1": SubResource("Animation_qlg0r")
}

[sub_resource type="Animation" id="Animation_smehm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
resource_name = "basic"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.13, 0.07), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 12.08), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "heavy"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.2588164, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ur7pv"]
_data = {
&"RESET": SubResource("Animation_smehm"),
&"basic": SubResource("Animation_ur7pv"),
&"heavy": SubResource("Animation_fjrip")
}

[sub_resource type="Animation" id="Animation_ywpfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Damaged:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9254902, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/HealthBar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t0c4q"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3077861, 1),
"update": 0,
"values": [Vector2(0.115, 0.115), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(2.9079993, 0.4493345, 0.3423896, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Damaged:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9254902, 0, 0, 0.20392157), Color(0.9254902, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/HealthBar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.52154535, 0.49443793, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kymhc"]
_data = {
&"RESET": SubResource("Animation_ywpfa"),
&"hurt": SubResource("Animation_t0c4q")
}

[sub_resource type="Animation" id="Animation_d2wvv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.3, 1.3)]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "basic"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 0), Vector2(0, 0), Vector2(-3, 0), Vector2(0, 0), Vector2(3, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3v2ag"]
resource_name = "heavy"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(12, 0), Vector2(0, 0), Vector2(-12, 0), Vector2(0, 0), Vector2(12, 0), Vector2(0, 0), Vector2(-12, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.3, 1.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3v2ag"]
_data = {
&"RESET": SubResource("Animation_d2wvv"),
&"basic": SubResource("Animation_y4r1p"),
&"heavy": SubResource("Animation_3v2ag")
}

[sub_resource type="Animation" id="Animation_f1ej7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jej6c"]
resource_name = "transition"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_oprun"]
resource_name = "transition_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_a8ls1"]
resource_name = "ready"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oprun"]
_data = {
&"RESET": SubResource("Animation_f1ej7"),
&"ready": SubResource("Animation_a8ls1"),
&"transition": SubResource("Animation_jej6c"),
&"transition_2": SubResource("Animation_oprun")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(19, 9)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
texture_filter = 2
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.36)
shape = SubResource("CapsuleShape2D_g2els")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="JumpAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}

[node name="WalkAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}
playback_default_blend_time = 0.5
speed_scale = 0.3

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
deterministic = true
root_node = NodePath(".")
libraries = {
&"": SubResource("AnimationLibrary_fjrip")
}

[node name="HeavyAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../JumpAnimation")
libraries = {
&"": SubResource("AnimationLibrary_ur7pv")
}

[node name="BasicAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../JumpAnimation")
libraries = {
&"": SubResource("AnimationLibrary_ur7pv")
}

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kymhc")
}
movie_quit_on_finish = true

[node name="CameraShake" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3v2ag")
}

[node name="CameraTransition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oprun")
}

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DummyPentagon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-68.912506, -29.922081)
scale = Vector2(0.030000003, 0.030000003)
texture = ExtResource("3_qhqgy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Damaged" type="ColorRect" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.9254902, 0, 0, 0)

[node name="HealthBarSmooth" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -100.0
offset_right = 866.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
step = 0.01
allow_greater = true
allow_lesser = true
texture_under = ExtResource("4_fjrip")
texture_progress = ExtResource("5_ur7pv")
tint_progress = Color(0.50140655, 0.5014065, 0.5014065, 1)

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -100.0
offset_right = 866.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
value = 90.0
texture_progress = ExtResource("5_smehm")

[node name="EnergyBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 68.00001
offset_top = -147.0
offset_right = 868.0
offset_bottom = 53.0
grow_vertical = 0
scale = Vector2(0.35, 0.35)
step = 0.1
value = 90.0
texture_under = ExtResource("6_ur7pv")
texture_progress = ExtResource("7_fjrip")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = 100
offset_left = -60.0
offset_top = -56.0
offset_right = 1953.0
offset_bottom = 1122.0
color = Color(0, 0, 0, 0)

[node name="Footstool" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Footstool"]
position = Vector2(0.5, 39.5)
shape = SubResource("RectangleShape2D_fjrip")

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
[connection signal="body_entered" from="Footstool" to="." method="_on_footstool_body_entered"]
